Update banner with the dark filter, fix spacing in jumbotron

--- a/less/styles.less
+++ b/less/styles.less
@@ -223,7 +223,7 @@ section#wg-projects {
 
 //== For event page
 #header-wrapper.header-idesummit-event {
-  background-image: url('images/jumbotron-idesummit-2021.png');
+  background-image: url('images/jumbotron-idesummit-2021.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -236,12 +236,14 @@ section#wg-projects {
     }
 
     h2 {
+      margin-top: 10px;
       color: @brand-primary;
       font-weight: 600;
     }
 
     p {
-      color: @black;
+      margin-top: 10px;
+      color: @white;
       font-size: 24px;
       font-weight: 600;
     }
